# sen2water

./: CHANGES.md  INSTALL.txt  LICENSE  README.md  requirements.txt  requirements.txt.windows  setup.cfg  setup.py.hidden
notebooks/: raw_to_s2w_mask.ipynb  reproject-geo-to-utm.ipynb
resources/: README
resources/etc/: acolite.parameters  c2rcc-graph.xml  idepix-graph.xml  polymer-mask-graph.xml  polymer.parameters  s2resampling-graph.xml  s2w-merge-graph.xml  snap.properties
resources/patches/: polymer-cglops.parameters  run-polymer.py  tgcparameters.py
resources/snap/: Sen2Water-000610-template.vm  descriptor.xml
resources/tools/: afindex.py  continentalshoreline.py  global.json  globalislandsinlandmask.py  globalmaskdask.py  globalmaskproduction.py  globalmasksimple.py  landcovergranule.py  landcovermaskproduction.py  rasterizeinland.py  rasterizeislands.py  s2wmasksimple.py  sortislands.py  worldcoverlandmask.py  zeromask.py
sen2water/eoutils/: eologging.py  eoprocessingifc.py  eoprofiling.py  eoprogress.py  eoscheduler.py  eoutils.py  msil1creader.py
sen2water/hrocresampling/: hrocmask.py  main.py
sen2water/msiresampling/: ancillaryinterpolation.py  anglesinterpolation.py  constants.py  downsampling.py  geocoordinates.py  hrocmask.py  main.py  meanangles.py  resamplingoperator.py  tpinterpolation.py  upsampling.py
sen2water/s2wswitching/: acolitebands.py  coastalswitching.py  inlandwaterswitching.py  main.py  pixelclassification.py  s2wformatting.py  statistics.py  switchingoperator.py
tests/: msi_testdata.py  test_msi_reader.py  test_resampling.py
