[metadata]
name = sen2water
version = attr: sen2water.version
author = Martin Böttcher, Brockmann Consult GmbH, for ESA OPT-MPC
description = Sen2Water MSI pixel identification and atmospheric correction for ocean and inland water areas
long_description = file: README.md
long_description_content_type = text/markdown
keywords = remote sensing, optical, water, Sentinel-2
license = MIT
url = https://github.com/bcdev/sen2water
project_urls =
	Documentation = https://github.com/bcdev/sen2water
	Issues = https://github.com/bcdev/sen2water/issues
	Changelog = https://github.com/bcdev/sen2water/blob/main/CHANGES.md

[options]
#python_requires = >=3.11
#install_requires = file: requirements.txt
packages = sen2water,sen2water.eoutils

[options.entry_points]
xarray.backends =
    safe_msi_l1c = sen2water.eoutils.msil1creader:MsiL1cBackendEntrypoint
